add logic to server and client
