# server/controllers/UploadController.js
@@ -1,19 +1,33 @@
 var container = require('../containerConfig');
 var projectsManager = container.get('projectsManager')
+var authenticator = container.get('authenticator')
 const csv = require("csvtojson");
 
 module.exports.uploadFile = async function (req, res, next) {
-    let file = req.files.upfile[0]
-    let collection = req.query.collection
-    let jsonForm = await csv({ output: "json"}).fromString(file.buffer.toString())
-    res.setHeader("Content-Type", "application/json")
-    try{
-        await projectsManager.storeProjectData(collection, jsonForm)
-        res.statusCode = 201
-        res.end()
+    if(!req.headers.authorization){
+        res.statusCode = 401
+        res.end(JSON.stringify({error: 'invalid authorization header'}))
     }
-    catch (e) {
-        res.statusCode = 400
-        res.end(JSON.stringify({error: e.message}))
+    else {
+        res.setHeader("Content-Type", "application/json")
+        let role = ''
+        try {
+            role = await authenticator.getRole(req.headers.authorization)
+        }
+        catch (e) {
+            res.statusCode = 401
+            res.end(JSON.stringify({error: 'unauthorized token'}))
+            return
+        }
+        let file = req.files.upfile[0]
+        let jsonForm = await csv({output: "json"}).fromString(file.buffer.toString())
+        try {
+            await projectsManager.storeProjectData(jsonForm, role)
+            res.statusCode = 201
+            res.end()
+        } catch (e) {
+            res.statusCode = 400
+            res.end(JSON.stringify({error: e.message}))
+        }
     }
 }
