# server/services/projectsManager.js
@@ -1,23 +1,44 @@
-const MongoClient = require('mongodb').MongoClient;
+let ACTIONS = require("../entitiesConfig").ACTIONS
+let RESOURCES = require("../entitiesConfig").RESOURCES
 
 module.exports.ProjectsManager = class BudgetManager {
-    constructor(config, archive){
+    constructor(config, archive, authenticator){
         this.config = config
         this.archive = archive
+        this.resource = RESOURCES.PROJECTS
+        this.methodsAuth = {
+            'storeProjectData': [ACTIONS.WRITE],
+            'getProjectsData': [ACTIONS.READ],
+            'removeProjectsByIds': [ACTIONS.DELETE]
+        }
+        this.authenticator = authenticator
     }
 
-    async storeProjectData(collection, budgetDataChunk){
-        let documents = []
+    async storeProjectData(projectDataChunk, role){
+        this.authenticator.validateRole(role, this.resource, this.methodsAuth[this.storeProjectData.name])
+        let documentsToInsert = []
+        let documentsToUpdate = []
         try {
-            for(let budgetRow of budgetDataChunk){
-                let transformedData = this.transformData(budgetRow)
+            let allDocs = await this.getProjectsData(role)
+            for(let projectRow of projectDataChunk){
+                let transformedData = this.transformData(projectRow)
                 let nullKey = this.containsNull(transformedData)
                 if (nullKey){
-                    throw Error(`Budget row does not contain ${nullKey} value`)
+                    throw Error(`Project row does not contain ${nullKey} value`)
                 }
-                documents.push({...transformedData, ...this.enrichData()})
+                let docFromDB = allDocs.find(x=> x.projectName === transformedData.projectName)
+                if(docFromDB){
+                    documentsToUpdate.push({...transformedData, ...{_id: docFromDB._id}})
+                }else {
+                    documentsToInsert.push({...transformedData, ...this.enrichData()})
+                }
             }
-            await this.archive.insertDocuments(collection, documents)
+            if(documentsToInsert.length > 0) {
+                await this.archive.insertDocuments(this.resource, documentsToInsert)
+            }
+            for(let docToUpdate of documentsToUpdate){
+                await this.archive.updateDocument(this.resource, docToUpdate._id, docToUpdate)
+            }
         }
         catch(ex) {
             console.log("Error caught,", ex);
@@ -25,9 +46,10 @@ module.exports.ProjectsManager = class BudgetManager {
         }
     }
 
-    async getProjectsData(collection){
+    async getProjectsData(role){
+        this.authenticator.validateRole(role, this.resource, this.methodsAuth[this.getProjectsData.name])
         try {
-            return this.archive.getAllDocuments(collection)
+            return this.archive.getAllDocuments(this.resource)
         }
         catch(ex) {
             console.log("Error caught,", ex);
@@ -35,9 +57,10 @@ module.exports.ProjectsManager = class BudgetManager {
         }
     }
 
-    async removeProjectsByIds(collection, ids){
+    async removeProjectsByIds(ids, role){
+        this.authenticator.validateRole(role, this.resource, this.methodsAuth[this.removeProjectsByIds.name])
         try {
-            return this.archive.removeDocumentsByIds(collection, ids)
+            return this.archive.removeDocumentsByIds(this.resource, ids)
         }
         catch(ex) {
             console.log("Error caught,", ex);
